Fixed to pass findbugs
Signed-off-by: Tsuyoshi Ozawa <ozawa.tsuyoshi@lab.ntt.co.jp>